Roger and Sandra - Minor CSS changes to stop footer from covering content

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -20,6 +20,11 @@ body {
     background-color: #3E7580;
 }
 
+.container-fluid {
+    padding: 10px;
+    margin-bottom: 150px;
+}
+
 .nav-btn {
     border: none;
     border-radius: 2px;
